--- a/European_Tour_Destinations_Dataset.ipynb
+++ b/European_Tour_Destinations_Dataset.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN5roMZBMpdQo7mXCOVYq8K",
+      "authorship_tag": "ABX9TyMzI+KZhUWVtTaNMw6YwQO3",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -504,6 +504,224 @@
           },
           "metadata": {},
           "execution_count": 5
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df.info()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "LuIrgI2azSSB",
+        "outputId": "fb392fb0-feb9-4d09-c810-8bba7ec7cff6"
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "<class 'pandas.core.frame.DataFrame'>\n",
+            "RangeIndex: 209 entries, 0 to 208\n",
+            "Data columns (total 16 columns):\n",
+            " #   Column                       Non-Null Count  Dtype  \n",
+            "---  ------                       --------------  -----  \n",
+            " 0   Destination                  209 non-null    object \n",
+            " 1   Region                       209 non-null    object \n",
+            " 2   Country                      209 non-null    object \n",
+            " 3   Category                     209 non-null    object \n",
+            " 4   Latitude                     209 non-null    float64\n",
+            " 5   Longitude                    209 non-null    float64\n",
+            " 6   Approximate Annual Tourists  209 non-null    object \n",
+            " 7   Currency                     209 non-null    object \n",
+            " 8   Majority Religion            209 non-null    object \n",
+            " 9   Famous Foods                 209 non-null    object \n",
+            " 10  Language                     209 non-null    object \n",
+            " 11  Best Time to Visit           209 non-null    object \n",
+            " 12  Cost of Living               209 non-null    object \n",
+            " 13  Safety                       209 non-null    object \n",
+            " 14  Cultural Significance        209 non-null    object \n",
+            " 15  Description                  159 non-null    object \n",
+            "dtypes: float64(2), object(14)\n",
+            "memory usage: 26.2+ KB\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Removing Irelevant Column\n",
+        "df=df.drop(columns=[\"Description\",\"Cultural Significance\",\"Safety\"])"
+      ],
+      "metadata": {
+        "id": "Nrmypq6MzTUo"
+      },
+      "execution_count": 8,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df.info()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "BmzIGkqaz2p3",
+        "outputId": "700792a7-e10f-4dc1-dd55-e8ff8c575e67"
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "<class 'pandas.core.frame.DataFrame'>\n",
+            "RangeIndex: 209 entries, 0 to 208\n",
+            "Data columns (total 13 columns):\n",
+            " #   Column                       Non-Null Count  Dtype  \n",
+            "---  ------                       --------------  -----  \n",
+            " 0   Destination                  209 non-null    object \n",
+            " 1   Region                       209 non-null    object \n",
+            " 2   Country                      209 non-null    object \n",
+            " 3   Category                     209 non-null    object \n",
+            " 4   Latitude                     209 non-null    float64\n",
+            " 5   Longitude                    209 non-null    float64\n",
+            " 6   Approximate Annual Tourists  209 non-null    object \n",
+            " 7   Currency                     209 non-null    object \n",
+            " 8   Majority Religion            209 non-null    object \n",
+            " 9   Famous Foods                 209 non-null    object \n",
+            " 10  Language                     209 non-null    object \n",
+            " 11  Best Time to Visit           209 non-null    object \n",
+            " 12  Cost of Living               209 non-null    object \n",
+            "dtypes: float64(2), object(11)\n",
+            "memory usage: 21.4+ KB\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df.isnull().sum()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 492
+        },
+        "id": "8CMN_ctX0DRJ",
+        "outputId": "61d9fed3-6fd0-4289-89d7-fe0ff4023e46"
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Destination                    0\n",
+              "Region                         0\n",
+              "Country                        0\n",
+              "Category                       0\n",
+              "Latitude                       0\n",
+              "Longitude                      0\n",
+              "Approximate Annual Tourists    0\n",
+              "Currency                       0\n",
+              "Majority Religion              0\n",
+              "Famous Foods                   0\n",
+              "Language                       0\n",
+              "Best Time to Visit             0\n",
+              "Cost of Living                 0\n",
+              "dtype: int64"
+            ],
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>0</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>Destination</th>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Region</th>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Country</th>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Category</th>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Latitude</th>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Longitude</th>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Approximate Annual Tourists</th>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Currency</th>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Majority Religion</th>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Famous Foods</th>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Language</th>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Best Time to Visit</th>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Cost of Living</th>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div><br><label><b>dtype:</b> int64</label>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 10
         }
       ]
     }
