--- a/Taiwan_height_and_weight_sampling_data.ipynb
+++ b/Taiwan_height_and_weight_sampling_data.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPiSkTRVmcf6EnQ9NXKPP7A",
+      "authorship_tag": "ABX9TyMGEIS2IxN5iOg3tASfZbG9",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -55,7 +55,7 @@
           "height": 206
         },
         "id": "9C2DBwE89KJ4",
-        "outputId": "cbf4209b-4043-461a-f903-8cb34807d04d"
+        "outputId": "089b54de-d0e0-407f-c27a-b53dbce0a4b2"
       },
       "execution_count": 2,
       "outputs": [
@@ -72,7 +72,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-64948219-2595-4f72-91ef-6b7dc975fbf8\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-58ad9a15-bbd3-438b-b4ac-15bb93747866\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -145,7 +145,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-64948219-2595-4f72-91ef-6b7dc975fbf8')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-58ad9a15-bbd3-438b-b4ac-15bb93747866')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -197,12 +197,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-64948219-2595-4f72-91ef-6b7dc975fbf8 button.colab-df-convert');\n",
+              "        document.querySelector('#df-58ad9a15-bbd3-438b-b4ac-15bb93747866 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-64948219-2595-4f72-91ef-6b7dc975fbf8');\n",
+              "        const element = document.querySelector('#df-58ad9a15-bbd3-438b-b4ac-15bb93747866');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -222,8 +222,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-79954929-8c9d-440f-81c6-c8f58d1f6219\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-79954929-8c9d-440f-81c6-c8f58d1f6219')\"\n",
+              "<div id=\"df-adcf4104-7fd4-499a-b011-e55c1668afbb\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-adcf4104-7fd4-499a-b011-e55c1668afbb')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -342,7 +342,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-79954929-8c9d-440f-81c6-c8f58d1f6219 button');\n",
+              "        document.querySelector('#df-adcf4104-7fd4-499a-b011-e55c1668afbb button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -355,13 +355,40 @@
             "application/vnd.google.colaboratory.intrinsic+json": {
               "type": "dataframe",
               "variable_name": "df",
-              "summary": "{\n  \"name\": \"df\",\n  \"rows\": 7770,\n  \"fields\": [\n    {\n      \"column\": \"yr\",\n      \"properties\": {\n        \"dtype\": \"category\",\n        \"num_unique_values\": 22,\n        \"samples\": [\n          \"0\",\n          \"13\",\n          \"8\"\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"height\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 22.46358883565647,\n        \"min\": 65.12,\n        \"max\": 174.5,\n        \"num_unique_values\": 2965,\n        \"samples\": [\n          151.94,\n          124.21,\n          161.81\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"weight\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 18.356920757184117,\n        \"min\": 7.08,\n        \"max\": 77.88,\n        \"num_unique_values\": 3242,\n        \"samples\": [\n          58.05,\n          62.74,\n          16.17\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"bmi\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 3.51572174090724,\n        \"min\": 14.34,\n        \"max\": 26.26,\n        \"num_unique_values\": 1102,\n        \"samples\": [\n          18.77,\n          22.85,\n          18.5\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"gender\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 0,\n        \"min\": 0,\n        \"max\": 1,\n        \"num_unique_values\": 2,\n        \"samples\": [\n          0,\n          1\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    }\n  ]\n}"
+              "summary": "{\n  \"name\": \"df\",\n  \"rows\": 7770,\n  \"fields\": [\n    {\n      \"column\": \"yr\",\n      \"properties\": {\n        \"dtype\": \"category\",\n        \"num_unique_values\": 22,\n        \"samples\": [\n          \"0\",\n          \"13\",\n          \"8\"\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"height\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 22.463588835656523,\n        \"min\": 65.12,\n        \"max\": 174.5,\n        \"num_unique_values\": 2965,\n        \"samples\": [\n          151.94,\n          124.21,\n          161.81\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"weight\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 18.356920757184145,\n        \"min\": 7.08,\n        \"max\": 77.88,\n        \"num_unique_values\": 3242,\n        \"samples\": [\n          58.05,\n          62.74,\n          16.17\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"bmi\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 3.5157217409072543,\n        \"min\": 14.34,\n        \"max\": 26.26,\n        \"num_unique_values\": 1102,\n        \"samples\": [\n          18.77,\n          22.85,\n          18.5\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"gender\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 0,\n        \"min\": 0,\n        \"max\": 1,\n        \"num_unique_values\": 2,\n        \"samples\": [\n          0,\n          1\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    }\n  ]\n}"
             }
           },
           "metadata": {},
           "execution_count": 2
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "###  **Potential Analyses**\n",
+        "**Exploratory Data Analysis (EDA):**\n",
+        "\n",
+        "Distribution analysis for height, weight, and BMI.\n",
+        "Age and gender-based trends.\n",
+        "\n",
+        "**Regression Analysis:**\n",
+        "\n",
+        "Linear Regression: Predict weight based on height and BMI.\n",
+        "Logistic Regression: Classify individuals by BMI categories."
+      ],
+      "metadata": {
+        "id": "bTBpdx2WM0bp"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "_i5qNbsQNDKM"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
