--- a/Taiwan_height_and_weight_sampling_data.ipynb
+++ b/Taiwan_height_and_weight_sampling_data.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO4WlOlzzITUuUhZlwzGsLj",
+      "authorship_tag": "ABX9TyOU8WZd2H9c7IYbYRU/XMAO",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -382,6 +382,15 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "#### **Checking Basic Information about dataset**"
+      ],
+      "metadata": {
+        "id": "RKSAmnvVWQlp"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "df.info()"
@@ -391,9 +400,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "_i5qNbsQNDKM",
-        "outputId": "f585e182-4a0f-4487-c0d2-01ec0cf0d3b9"
+        "outputId": "bb4f552c-7bdc-41c5-a568-f68bc8f9e91b"
       },
-      "execution_count": 3,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
@@ -426,9 +435,9 @@
           "height": 300
         },
         "id": "AZ9hstiKNiz7",
-        "outputId": "c1c60be4-d72c-4998-fa56-fc126450e288"
+        "outputId": "9f159c1c-5739-40d0-90ba-7971dee48679"
       },
-      "execution_count": 4,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -446,7 +455,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-b6847d59-788f-4439-89c9-520343061a7f\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-13160c72-0361-473c-b418-6cde6610a38d\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -534,7 +543,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-b6847d59-788f-4439-89c9-520343061a7f')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-13160c72-0361-473c-b418-6cde6610a38d')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -586,12 +595,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-b6847d59-788f-4439-89c9-520343061a7f button.colab-df-convert');\n",
+              "        document.querySelector('#df-13160c72-0361-473c-b418-6cde6610a38d button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-b6847d59-788f-4439-89c9-520343061a7f');\n",
+              "        const element = document.querySelector('#df-13160c72-0361-473c-b418-6cde6610a38d');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -611,8 +620,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-dc812853-6b9e-4cb8-8c87-e464272bfe1e\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-dc812853-6b9e-4cb8-8c87-e464272bfe1e')\"\n",
+              "<div id=\"df-341ef5ec-3d3a-44ac-a19d-08bb0beec2a2\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-341ef5ec-3d3a-44ac-a19d-08bb0beec2a2')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -731,7 +740,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-dc812853-6b9e-4cb8-8c87-e464272bfe1e button');\n",
+              "        document.querySelector('#df-341ef5ec-3d3a-44ac-a19d-08bb0beec2a2 button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -747,7 +756,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 4
+          "execution_count": 15
         }
       ]
     },
@@ -757,13 +766,13 @@
         "df.shape"
       ],
       "metadata": {
-        "id": "_ZjCV4O-OQON",
-        "outputId": "29012ad5-9702-45ca-901a-2a21e9e35d62",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "_ZjCV4O-OQON",
+        "outputId": "f5ddac6d-75cb-4d4c-ad6e-98b87a6ff566"
       },
-      "execution_count": 8,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -773,9 +782,44 @@
             ]
           },
           "metadata": {},
-          "execution_count": 8
+          "execution_count": 16
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df.columns"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "_IR0348fWxRQ",
+        "outputId": "0af44be7-70f2-46fd-db30-f1fd63d1e6ba"
+      },
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Index(['yr', 'height', 'weight', 'bmi', 'gender'], dtype='object')"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 17
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#### **Checking the unique values of all the columns in the dataset**"
+      ],
+      "metadata": {
+        "id": "IACq9OwvWIRG"
+      }
     },
     {
       "cell_type": "code",
@@ -828,6 +872,84 @@
           },
           "metadata": {},
           "execution_count": 7
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df[\"weight\"]. nunique()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "r5c-PX38Vj0O",
+        "outputId": "799f4d07-41a2-4d14-c7b6-76666d0c9a03"
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "3242"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 10
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df[\"bmi\"].nunique()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "g6zxlh5lV49y",
+        "outputId": "a100b32f-5967-4fb1-c499-a5eac0c4184d"
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "1102"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 11
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df[\"gender\"].nunique()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "YWwQSXuEV_-5",
+        "outputId": "ab96089d-8948-4c36-d1cd-b2f4a67deb2e"
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "2"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 13
         }
       ]
     }
