--- a/Taiwan_height_and_weight_sampling_data.ipynb
+++ b/Taiwan_height_and_weight_sampling_data.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOCYtKxXo1Gk8h+Fx4Cl/Zv",
+      "authorship_tag": "ABX9TyOL+x/PqSBs9JHTvSvBvV0d",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2532,6 +2532,66 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#### **Machine Learning on Entire Dataset**"
+      ],
+      "metadata": {
+        "id": "2l1JFm726kid"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "***Regression Analysis:***\n",
+        "\n",
+        "**Linear Regression**: Predict weight based on height and BMI.\n",
+        "\n",
+        "**Logistic Regression:** Classify individuals by BMI categories."
+      ],
+      "metadata": {
+        "id": "NfkgKUJw7dJO"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##### FIRST We will be building a **linear regression model.**"
+      ],
+      "metadata": {
+        "id": "4t3IUBlK7h_D"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Importing Machine Learning Libraries\n",
+        "from sklearn.model_selection import train_test_split\n",
+        "from sklearn.linear_model import LinearRegression\n",
+        "from sklearn.metrics import mean_squared_error, r2_score\n",
+        "from sklearn.model_selection import train_test_split\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "XyGIRiIa6sP7"
+      },
+      "execution_count": 60,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Splitting Dataset into X and Y\n",
+        "X=df[[\"height\",\"bmi\"]]\n",
+        "y=df[\"weight\"]"
+      ],
+      "metadata": {
+        "id": "WYwQ7bx88cLt"
+      },
+      "execution_count": 61,
+      "outputs": []
     }
   ]
 }
